# CS61C

./: CMakeLists.txt
sp24-lab-starter/lab00/: code.py
sp24-lab-starter/lab01/: ex1_hello.c  ex4_arrays.c  ex4_arrays_updated.c  ex5_pointer_arithmetic.c  ex5_pointer_arithmetic_updated.c  ex6_strings.c  ex7_strcpy.c  ex8_structs.c
